Archive2/fb/e5a66f6a100173/output
main.cpp: In function 'int main()':
main.cpp:7:18: error: use of deleted function 'lol::lol(const lol&)'
     auto x = lol{};
                  ^
main.cpp:2:5: note: declared here
     lol(const lol&) = delete;
     ^
